# haard

./: .gitignore  CMakeLists.txt  README.md
examples/: big_opers.hd  c0.hd  c1.hd  class0.hd  cpp.hd  cpp2.hd  enums0.hd  file.hd  for.hd  functions.hd  if.hd  import.hd  import1.hd  jumps.hd  lambda0.hd  print.hd  sem0.hd  struct0.hd  switch.hd  sym0.hd  t0.hd  traits.hd  unions.hd  use_print.hd
examples/enum/: enum0.hd
examples/semantic/: s0.hd  s1.hd  s2.hd  s3.hd
examples/syntax/: t0.hd  t1.hd  t10.hd  t2.hd  t3.hd  t4.hd  t5.hd  t6.hd  t7.hd  t8.hd  t9.hd
src/: main.cc  main.cpp
src/ast/: array_type.cc  ast.cc  class.cc  compound_statement.cc  declaration.cc  enum.cc  expression.cc  expression_statement.cc  function.cc  identifier.cc  import.cc  module.cc  named_type.cc  named_type_descriptor.cc  pointer_type.cc  sequence.cc  struct.cc  this.cc  type.cc  union.cc  variable.cc
src/cpp_generator/: class_cpp_generator.cc  cpp_generator.cc  expression_cpp_generator.cc  function_cpp_generator.cc  module_cpp_generator.cc  modules_cpp_generator.cc  statement_cpp_generator.cc
src/driver/: driver.cc
src/haard/: haard.h  main.cc
src/ir/: ir.cc  ir_binop.cc  ir_value.cc
src/json/: json.cc  json_value.cc
src/log/: log.cc  log.cc.autosave  logger.cc  logger.cc.autosave  logs.cc
src/parser/: parser.cc
src/pretty_printer/: pretty_printer.cc
src/scanner/: scanner.cc
src/scope/: scope.cc  symbol.cc  symbol_descriptor.cc
src/semantic/: module_function_definer.cc  module_named_type_definer.cc  module_semantic_analyser.cc  modules_semantic_analyser.cc  semantic_analyser.cc  semantic_context.cc  semantic_define_pass.cc  semantic_first_pass.cc  semantic_pass.cc  type_linker.cc
src/symbol_table/: symbol.cc  symbol_table.cc
src/utils/: utils.cc
tests/prettier/: t0.hd
tests/pretty/: class0.hd  class1.hd  def0.hd  def1.hd  def2.hd  if0.hd  if1.hd  if2.hd  if3.hd  import0.hd  run_tests.py  t1.hd  t10.hd  t11.hd  t12.hd  t13.hd  t14.hd  t15.hd  t16.hd  t17.hd  t18.hd  t2.hd  t3.hd  t4.hd  t5.hd  t6.hd  t7.hd  t8.hd  types0.hd
tests/semantic/: t2.hd  (+1 more)
vim/: hd.vim  hd.vim.syntax
(+446 files in other folders)
